ARROW-15306: [C++] S3FileSystem Should set the content-type header to application/octet-stream if not specified

This changes the S3 filesystem so that newly created files (with no content-type specified) are given a content-type of application/octet-stream instead of application/xml.  See https://issues.apache.org/jira/browse/ARROW-15306 for more details.

Closes #12129 from westonpace/feature/ARROW-15306--default-content-type-to-octet-stream

Authored-by: Weston Pace <weston.pace@gmail.com>
Signed-off-by: Antoine Pitrou <antoine@python.org>